# vak-opensource

bk/basic-vvu-1985/: bk.mac  comp.mac  float.mac  graf.mac  jmp.mac  monit.mac  trap.mac
bk/basic-vvu-1987/: bas11.com  basmsx.txt  floats.mac  gen.mac  graf.mac  io.mac  jmin.mac  jmp.mac  monit.mac  trap.mac
bk/bk-0010-sources/: bk10.lst  bknet.lst  d1.mac  d2.mac  d3.mac  d4.mac  d5.mac  d6.mac
bk/bk-0011-sources/: 120000.sav  140000.sav  bcircl.mac  bkclr.mac  bkcomm.mac  bkctrl.mac  bkdeb.mac  bkdisk.mac  bkemt.mac  bkgrp2.mac  bkgsub.mac  bkgtab.mac  bkgtl.mac  bkhead.mac  bkkbd.mac  bklib.mac  bkmt.mac  bksout.mac  bkstrt.mac  bktv.mac  bmap.mac  lintap.mac  mememt.mac  ttemt.mac
bk/bortnik/: vm3.txt
bk/demos-dvk/: .gitignore  READ_ME.txt  demos-harddisk.ini  demos-install.ini  demos.bat  demos.ini  demos.sh  floppy1+rt11.img  floppy1.img  floppy2.img  floppy3.img  floppy4.img  floppy5.img  floppy6.img
bk/simh-dvk/: 0readme_38.txt  descrip.mms  makefile  pdp11_cis.c  pdp11_cpu.c  pdp11_cpumod.c  pdp11_cpumod.h  pdp11_cr.c  pdp11_cr_dat.h  pdp11_dc.c  pdp11_defs.h  pdp11_dl.c  pdp11_dz.c  pdp11_fp.c  pdp11_hk.c  pdp11_io.c  pdp11_io_lib.c  pdp11_io_lib.h  pdp11_kg.c  pdp11_kgd.c  pdp11_kmd.c  pdp11_lp.c  pdp11_mscp.h  pdp11_pclk.c  pdp11_pt.c  pdp11_rc.c  pdp11_rf.c  pdp11_rh.c  pdp11_rk.c  pdp11_rl.c  pdp11_rp.c  pdp11_rq.c  pdp11_rx.c  pdp11_ry.c  pdp11_stddev.c  pdp11_sys.c  pdp11_ta.c  pdp11_tc.c  pdp11_tm.c  pdp11_tq.c  (+28 more)
compilers/aarch64/: .gitignore  HelloWorld.s  branch.S  condition-codes.py  hi.S  makefile  primes.S
compilers/b/: README.txt  Readme
compilers/bcpl/: COPYRIGHT  LIBHDR  Makefile  README  SYNHDR  TRNHDR  bcpl  blib.bcpl  blib.c  blib.h  blib.i  btran.c  cg.bcpl  cg.i  clib.c  hello.bcpl  icint.bcpl  icint.c  rt.s  rules  su.s  syn.bcpl  syn.i  sys.s  trn.bcpl  trn.i  xg.bcpl
compilers/fortran8/: README.txt  fortran8.plx
compilers/mmix/: .gitignore  Makefile  echo.S  echo.lst  echo.mms  hello.c  hello.lst  hello.mms  hi.S  primes.S  primes.lst
compilers/newlib/: config-arm32.txt  config-riscv64.txt
compilers/pcc-e1kb/: Makefile  README  makelinks
compilers/pic16/: Makefile
compilers/pic17/: Makefile  README-RUS
compilers/qemu-mips/: Makefile  gdbinit  hello.c  hello.dis  hello.elf  script.ld  startup.c  uart.c  uart.h
compilers/riscv64/: .gitignore  compile.sh
compilers/tesei/: Makefile  skeleton.c
compilers/test-exceptions/: Makefile  code-in-flash.ld  io-mc24.h  test-exceptions.S  test-exceptions.dis  test-exceptions.out  test-exceptions.srec
compilers/test-mips-linker/: Makefile  elf-mips-relocation-types.txt  elf32-mips-le.ld  link-test1.sh
dos/bios-scancodes/: keycodes-alt.txt  keycodes-capslock.txt  keycodes-control.txt  keycodes-normal.txt  keycodes-numlock.txt  keycodes-shifted.txt  keys-modifiers.txt  makefile  pckeys.c
dos/digger/: WinDig.rc  armasm.asm  armsup.c  bags.c  bags.h  bc02.asm  def.h  device.h  digger.c  digger.h  digger.prj  digleved.c  digleved.prj  digleved.rsp  digsrc.txt  dos.txt  dospc.asm  drawing.c  drawing.h  drf.txt  edasm.h  eddospc.asm  faq.txt  fns.txt  getscore.c  hardware.h  (+36 more)
games/: .gitignore
hamradio/: arduino-keyer.c  elbug.c  non-iambic-keyer.c
hardware/: xc3s500e-fg320.txt
hash-bench/: GeneralHashFunctions.c  GeneralHashFunctions.h  Makefile  hash-bench.c  result-symbols  result-usdict  symbols  usdict
judo/: LICENSE.txt  README.txt  judo.properties  run.bat  run.sh
languages/c++/gtkmm-cmake/: CMakeLists.txt  helloworld.cpp  helloworld.h  main.cpp  readme.md
languages/c++/gtkmm-sort/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.h  readme.md
languages/c++/metal-cpp/: CMakeLists.txt  Makefile  app_main.mm  metal_renderer.cpp  metal_renderer.h  shader.metal
languages/c++/onnx-style/: CMakeLists.txt  style.cpp
languages/c++/qmc/: .gitignore  CMakeLists.txt  minimizer.cpp  tests.cpp  utils.cpp  utils.h
languages/c++/wxwidgets/: CMakeLists.txt  minimal.cpp
languages/c-language/hello-meson/tests/: meson.build  simple
languages/c-language/map/: CMakeLists.txt  Makefile  Notes-1.md  Notes-2.md  Notes-3.md  Notes-4.md  Notes-5.md  avlmap.c  avlmap_test.cpp  bstmap.c  hashmap.c  hashmap_test.cpp  string_map.h
languages/c-language/scanner/: .gitignore  CMakeLists.txt  scanner.c  scanner.cpp  scanner.h  tests.cpp
languages/python/pyrgo/: README.md  pyproject.toml
languages/python/pyrgo/tests/: test_something.py
languages/swift/swift-mlir/: CMakeLists.txt  Makefile  lib.swift  main.swift
languages/swift/swift-mlir/cmlir/: module.modulemap  shim.h
macosx/: mf626-balance.expect  webroot-cpu-usage.sh
maze/: Makefile  global.h  maze-gen.c  maze.c  maze.h  readme.txt  robot-gen.c  robot-tour.c  robot.c  robot.h
microcontrollers/esp-idf/oled/main/: 5x7.c  6x9.c  CMakeLists.txt  config.h  courier10.c  courier12.c  courier14.c  courier18.c  courier24.c  courier8.c  dejavusans10.c  dejavusans12.c  dejavusans14.c  dejavusans18.c  dejavusans8.c  dejavusanscond10.c  dejavusanscond12.c  dejavusanscond14.c  dejavusanscond18.c  dejavusanscond8.c  digits20.c  digits32.c  draw.c  font.c  font.h  font_Comic_Neue_25x28.c  font_Liberation_Sans_15x16.c  freesans10.c  freesans12.c  freesans14.c  freesans18.c  freesans8.c  georgia10.c  georgia12.c  georgia14.c  georgia18.c  georgia8.c  helv11.c  helv13.c  helv16.c  (+70 more)
microcontrollers/raspberry-pico-sysreg/: CMakeLists.txt  README.txt  sysreg_usb.c
microcontrollers/raspberry-pico/blink/: CMakeLists.txt  blink.c
microcontrollers/raspberry-pico/fatfs/: 00history.txt  CMakeLists.txt  README.md  crc.h  demo_logging.c  diskio.c  fatfs.c  fatfs.h  hw_config.c  sd_card.h  sd_spi.c  spi.c  unicode.c  util.h
microcontrollers/raspberry-pico/usb-rom/: .gitignore  CMakeLists.txt  main.c  msc_disk.c  tusb_config.h  usb_descriptors.c
microcontrollers/raspberry-pico/usb-rom/mkimage/: mkimage.sh
sysinfo/: README.txt
utilities/gtest-demo/: CMakeLists.txt  CharUtil.cpp  CharUtil.h  CharUtilTest.cpp  GTestLists.txt  README.txt  Soundex.h  SoundexTest.cpp  StringUtil.cpp  StringUtil.h  StringUtilTest.cpp  example.cpp
(+5889 files in other folders)
