cmake_minimum_required(VERSION 3.5)
idf_component_register(
    SRCS
        "oled.c"
        "draw.c"
        "main.c"
        "lucidasans8.c"
        "lucidasans10.c"
        "lucidasans12.c"
        "lucidasans14.c"
        "lucidasans18.c"
        "lucidasans28.c"
        "verdana8.c"
        "verdana10.c"
        "verdana12.c"
        "verdana14.c"
        "verdana18.c"
        "5x7.c"
        "6x9.c"
        "digits20.c"
        "digits32.c"
        "dejavusans10.c"
        "dejavusans12.c"
        "dejavusans14.c"
        "dejavusans18.c"
        "dejavusans8.c"
        "dejavusanscond10.c"
        "dejavusanscond12.c"
        "dejavusanscond14.c"
        "dejavusanscond18.c"
        "dejavusanscond8.c"
        "freesans10.c"
        "freesans12.c"
        "freesans14.c"
        "freesans18.c"
        "freesans8.c"
        "georgia10.c"
        "georgia12.c"
        "georgia14.c"
        "georgia18.c"
        "georgia8.c"
        "liberationsans10.c"
        "liberationsans12.c"
        "liberationsans14.c"
        "liberationsans18.c"
        "liberationsans8.c"
        "liberationserif10.c"
        "liberationserif12.c"
        "liberationserif14.c"
        "liberationserif18.c"
        "liberationserif8.c"
        "ubuntu10.c"
        "ubuntu12.c"
        "ubuntu14.c"
        "ubuntu18.c"
        "ubuntu8.c"
        "tahoma10.c"
        "tahoma12.c"
        "tahoma14.c"
        "tahoma18.c"
        "tahoma8.c"

    INCLUDE_DIRS
        ""
)
